compaq/web.py-install.txt
Collecting web.py
  Downloading https://files.pythonhosted.org/packages/fc/58/21649fc1849b1f688f3d42e25e79615cc573469ea57eaa9e6af70b1e3b87/web.py-0.39.tar.gz (93kB)
    Complete output from command python setup.py egg_info:
    Traceback (most recent call last):
      File "<string>", line 1, in <module>
      File "/tmp/pip-build-cwfw34xl/web.py/setup.py", line 6, in <module>
        from web import __version__
      File "/tmp/pip-build-cwfw34xl/web.py/web/__init__.py", line 14, in <module>
        import utils, db, net, wsgi, http, webapi, httpserver, debugerror
    ModuleNotFoundError: No module named 'utils'
    
    ----------------------------------------
Collecting web.py
  Using cached https://files.pythonhosted.org/packages/fc/58/21649fc1849b1f688f3d42e25e79615cc573469ea57eaa9e6af70b1e3b87/web.py-0.39.tar.gz
    Complete output from command python setup.py egg_info:
    Traceback (most recent call last):
      File "<string>", line 1, in <module>
      File "/tmp/pip-build-kx757ibn/web.py/setup.py", line 6, in <module>
        from web import __version__
      File "/tmp/pip-build-kx757ibn/web.py/web/__init__.py", line 14, in <module>
        import utils, db, net, wsgi, http, webapi, httpserver, debugerror
    ModuleNotFoundError: No module named 'db'
    
    ----------------------------------------
Collecting web.py
  Using cached https://files.pythonhosted.org/packages/fc/58/21649fc1849b1f688f3d42e25e79615cc573469ea57eaa9e6af70b1e3b87/web.py-0.39.tar.gz
    Complete output from command python setup.py egg_info:
    Traceback (most recent call last):
      File "<string>", line 1, in <module>
      File "/tmp/pip-build-5m_aytkf/web.py/setup.py", line 6, in <module>
        from web import __version__
      File "/tmp/pip-build-5m_aytkf/web.py/web/__init__.py", line 14, in <module>
        import utils, db, net, wsgi, http, webapi, httpserver, debugerror
      File "/home/thomas/.local/lib/python3.6/site-packages/db/__init__.py", line 69
        print "var", var
                  ^
    SyntaxError: Missing parentheses in call to 'print'. Did you mean print("var", var)?
    
    ----------------------------------------
